docs: adiciona objetivos e metodologia reuso de software

--- a/docs/ArquiteturaReutilizacao/4.2.ReutilizacaoDeSoftware.md
+++ b/docs/ArquiteturaReutilizacao/4.2.ReutilizacaoDeSoftware.md
@@ -6,11 +6,11 @@ O conceito de reutilização de software foi primeiro visto em 1968, ano no qual
 
 ## Objetivo
 
-
+Sendo assim, o objetivo principal da reutilização de software é evitar o retrabalho no desenvolvimento, de forma a se maximizar a produtividade, qualidade e custo-benefício no processo de software. No contexto do presente artefato, a meta foi reunir e exemplificar a aplicação desse conceito no escopo do projeto, utilizando padrões de projeto, bibliotecas, frameworks, ferramentas, entre outros recursos disponíveis.
 
 ## Metodologia
 
-
+A preparação para a produção do artefato teve início na reunião documentada na [Ata 5](/atas/ata5.md), na qual se iniciaram as discussões acerca de como a reutilização de software ia ser abordada no projeto. Ao fim dessa reunião, decidiu-se que cinco duplas iriam, cada uma, escolher um padrão de projeto que se encaixe no escopo do projeto, apresentar uma problemática, a sua solução para ela, a modelagem e código de exemplo. Além do reúso por meio dos padrões de projeto, como optou-se por usar a visão de dados da arquitetura, o grupo achou válido representar também o reúso de software pela ótica de banco de dados. Ademais, a metodologia específica da elaboração de cada padrão de projeto pode ser vista em sua própria página.
 
 ## Reutilização Interna
 
@@ -58,11 +58,10 @@ Figura X - Views criadas para o projeto
 > KRUEGER, Charles. ACM Computing Surveys. Volume 24, Issue 2, pp 131–183, 1992. Disponível em: https://doi.org/10.1145/130844.130856.
 
 ## Histórico de Versões
+
 | Versão   | Descrição  | Responsável | Revisor    | Data      |
 |----------|------------|-------------|------------|-----------|
-<<<<<<< Updated upstream
 | 1.0      | Criação da estrutura da página   | [Douglas Alves](https://github.com/dougAlvs)   |  [Sidney Fernando](https://github.com/nando3d3)  | 23/11/2023|
-=======
-| 1.0      | Criação da estrutura da página   | [Douglas Alves](https://github.com/dougAlvs)   |  [Sidney Fernando](https://github.com/nando3d3)  | 23/11/2023|
-| 1.1      | Adição da introdução   | [Arthur de Melo](https://github.com/arthurmlv)   |  [Douglas Alves](https://github.com/dougAlvs)  | 30/11/2023|
->>>>>>> Stashed changes
+| 1.0.1     | Adição do reuso do banco   | [Douglas Alves](https://github.com/dougAlvs)   |  [Sidney Fernando](https://github.com/nando3d3)  | 23/11/2023|
+| 1.0.2      | Adição da introdução   | [Arthur de Melo](https://github.com/arthurmlv)   |  [Douglas Alves](https://github.com/dougAlvs)  | 30/11/2023|
+| 1.0.3      | Adição do objetivo e metodologia   | [Douglas Alves](https://github.com/dougAlvs)  |  [Sidney Fernando](https://github.com/nando3d3)  | 30/11/2023|
