docs: documenta reuso de testes

--- a/docs/ArquiteturaReutilizacao/4.2.ReutilizacaoDeSoftware.md
+++ b/docs/ArquiteturaReutilizacao/4.2.ReutilizacaoDeSoftware.md
@@ -18,11 +18,29 @@ A preparação para a produção do artefato teve início na reunião documentad
 
 ## Reutilização Externa
 
+### JUnit
+
+No ano de 1997, ao reconhecerem a imprescindibilidade dos testes automatizados, Erich Gamma e Kent Beck desenvolveram um framework para testes unitários em Java: o [JUnit](https://junit.org/junit4/). Por conseguinte, o JUnit rapidamente o framework padrão para o desenvolvimento de testes unitários em Java. Atualmente, tal framework se trata de um software open source, introduzido sob domínio da [IBM’s Common Public License Version 1.0](https://www.ibm.com/docs/en/linux-on-z?topic=examples-common-public-license-v10) e hospedado no [SourceForge](https://sourceforge.net/) (MASSOL, 2004).
+
+Sendo assim, o JUnit 4.11 foi utilizado neste projeto para implementar testes unitários para a funcionalidade de cálculo de desconto dos cupons por meio do padrão de design Strategy. Para cada classe concreta do Strategy, foram elaborados apenas dois casos de testes, dado que o cálculo do valor final não envolvia condicionais. Além disso, o JUnit foi utilizado junto ao [Apache Maven](https://maven.apache.org/), o qual fez o gerenciamento das dependências e foi utilizado para rodar a suíte de testes.
+
+Portanto, para rodar os testes, é necessário instalar o [Apache Maven](https://maven.apache.org/) por meio do comando `sudo apt-get install maven` no terminal do linux. Em seguida, utilize o comando `mvn compile exec:java` na pasta `code/padroes/strategy/demo`. Dessa forma, o projeto será compilado e terá suas dependências instaladas. Por fim, para executar todos os testes, basta digitar `mvn test`, e o resultado obtido está explicitado na Figura ZZ1. Contudo, caso opte somente por executar um teste apenas, utilize do comando `mvn test -Dtest="NomeDoTeste"`, como exemplo de uso no projeto: `mvn test -Dtest="CalcDescontoValorTest"`.
+
+<center>
+
+Figura ZZ1 - Execução dos testes
+
+<img src="assets/testes.png" alt="Suite de testes" width="1400"/>
+
+<font>Fonte: [Arthur de Melo](https://github.com/arthurmlv), 2023</font>
+
+</center>
+
 ### Banco de Dados
 
 Um exemplo notável da reutilização de software é o uso de Sistemas de Gerenciamento de Banco de Dados para a camada de persistência de aplicações. Os SGBDs são softwares amplamente utilizados, que oferecem uma solução eficiente e confiável para o armazenamento e gerenciamento de dados. No contexto do projeto, optou-se por utilizar o SGBD relacional [MySQL 8.0](https://www.mysql.com), efetivamente reutilizando um componente de software robusto e testado, economizando tempo e recursos que seriam necessários para desenvolver um sistema de banco de dados do zero.
 
-### Uso do Banco
+#### Uso do Banco
 
 Como um exemplo desse reúso de software por meio de banco de dados, foi feita a implementação de um banco com base na modelagem definida na [Visão de Dados]() do Documento de Arquitetura de Software. Para por o banco para rodar basta seguir o passo a passo seguinte:
 
@@ -41,6 +59,8 @@ Figura X - Views criadas para o projeto
 
 <font>Fonte: [Douglas Alves](https://github.com/dougAlvs), 2023</font>
 
+</center>
+
 ## Conclusão
 
 
@@ -54,6 +74,8 @@ Figura X - Views criadas para o projeto
 > KRUCHTEN, Philippe B. The 4+1 view model of architecture. IEEE software, v. 12, n. 6, p. 42-50, 1995.
 >
 > KRUEGER, Charles. ACM Computing Surveys. Volume 24, Issue 2, pp 131–183, 1992. Disponível em: https://doi.org/10.1145/130844.130856.
+>
+> MASSOL, Vincent. JUnit in action. 2004. Disponível em: https://ds.amu.edu.et/xmlui/bitstream/handle/123456789/11251/Manning.JUnit.In.Action.Oct.2003.ISBN.1930110995.pdf?sequence=1&isAllowed=y.
 
 ## Histórico de Versões
 
@@ -63,3 +85,4 @@ Figura X - Views criadas para o projeto
 | 1.0.1     | Adição do reuso do banco   | [Douglas Alves](https://github.com/dougAlvs)   |  [Sidney Fernando](https://github.com/nando3d3)  | 23/11/2023|
 | 1.0.2      | Adição da introdução   | [Arthur de Melo](https://github.com/arthurmlv)   |  [Douglas Alves](https://github.com/dougAlvs)  | 30/11/2023|
 | 1.0.3      | Adição do objetivo e metodologia   | [Douglas Alves](https://github.com/dougAlvs)  |  [Sidney Fernando](https://github.com/nando3d3)  | 30/11/2023|
+| 1.0.4      | Adiciona reutilização de testes   | [Arthur de Melo](https://github.com/arthurmlv)  |  [Geovanna Maciel](https://github.com/manuziny)  | 01/12/2023|
