--- a/docs/ArquiteturaReutilizacao/4.2.ReutilizacaoDeSoftware.md
+++ b/docs/ArquiteturaReutilizacao/4.2.ReutilizacaoDeSoftware.md
@@ -31,7 +31,7 @@ Como um exemplo desse reúso de software por meio de banco de dados, foi feita a
 3. No repositório do projeto, especificamente no diretório [code/banco-de-dados](https://github.com/UnBArqDsw2023-2/2023.2_G7_ProjetoMagazineLuiza/tree/main/code/banco-de-dados), estão localizados os scripts SQL do banco. Execute primeiro o [cria.sql](https://github.com/UnBArqDsw2023-2/2023.2_G7_ProjetoMagazineLuiza/blob/main/code/banco-de-dados/cria.sql) para criar o banco de dados, tabelas e views, e depois o [popula.sql](https://github.com/UnBArqDsw2023-2/2023.2_G7_ProjetoMagazineLuiza/blob/main/code/banco-de-dados/popula.sql) para popular essas tabelas;
 4. Se tudo tiver ocorrido bem, o banco já vai estar funcionando na base de dados magaluDB. Caso queira realizar alguns testes, o script [busca.sql](https://github.com/UnBArqDsw2023-2/2023.2_G7_ProjetoMagazineLuiza/blob/main/code/banco-de-dados/busca.sql) apresenta algumas queries SQL que seriam comuns em uma aplicação desse escopo e o script [apaga.sql](https://github.com/UnBArqDsw2023-2/2023.2_G7_ProjetoMagazineLuiza/blob/main/code/banco-de-dados/apaga.sql), que não existiria de maneira tão exposta em casos reais, serve como ferramenta para realizar testes na base de exemplo criada.
 
-Além disso, um outro exemplo de reutilização de software na camada de persistência é o uso de views. Uma view possibilita encapsular determinadas queries SQL como se fossem tabelas, assim pesquisas comumemente realizadas na base de dados, ao invés de serem repetidas, são transformadas em views, com a pesquisa sendo feita em cima delas, ao invés disso. O exemplo de implementação do padrão de projeto [singleton]() exercita a conexão ao banco de dados com esse padrão, além do uso de views no backend. A Figura X mostra alguns exemplos de views que foram criadas no banco de dados do projeto.
+Além disso, um outro exemplo de reutilização de software na camada de persistência é o uso de views. Uma view possibilita encapsular determinadas queries SQL como se fossem tabelas, assim pesquisas comumemente realizadas na base de dados, ao invés de serem repetidas, são transformadas em views, com a pesquisa sendo feita em cima delas, ao invés disso. O exemplo de implementação do padrão de projeto [singleton](/PadroesDeProjeto/singleton) exercita a conexão ao banco de dados com esse padrão, além do uso de views no backend. A Figura X mostra alguns exemplos de views que foram criadas no banco de dados do projeto.
 
 <center>
 
