docs: adiciona reutilização strategy

--- a/docs/ArquiteturaReutilizacao/4.2.ReutilizacaoDeSoftware.md
+++ b/docs/ArquiteturaReutilizacao/4.2.ReutilizacaoDeSoftware.md
@@ -14,7 +14,25 @@ A preparação para a produção do artefato teve início na reunião documentad
 
 ## Reutilização Interna
 
+### Strategy
 
+A análise de *hot spots* se dá pela análise dos pontos de especialização de um determinado framework. Sendo assim, as classes que possuem implementação rasa ou sem muito significado se caracterizam mais como pontos de hot spots (PREE, 1997). Logo, infere-se que as partes de implementação mais concretas e específicas são definidas como *frozen spots*. Ademais, deve-se ponderar que esta resolução não objetiva validar se o cupom é válido ou não para aquele produto, a implementação da resolução dessa vicissitude está detalhada no documento do [Chain of Responsibility](PadroesDeProjeto/chainOfResponsibility.md).
+
+No caso da especialização do Strategy implementada para o projeto, os frozen spots ficam notórios a se considerar que o padrão seria reutilizado para cálculo de desconto. Portanto, a especialização destes seria pouco provável, e tais correspondem às classes destacadas de azul na imagem: `calcDescontoStrategy`, `calcDescontoPorcento`, `calcDescontoValor` e `noDiscount`.
+
+No entanto, apenas uma classe corresponde ao que é maleável: a `sacola`. Dado que o contexto pode mudar, por mais que seja necessário aplicar o desconto, o valor total pode ser calculado de forma diferente, bem como os itens podem ser armazenados de forma diferente. Além de que os métodos são extremamente gerais e não especializados mesmo na implementação do diagrama da Figura 1.
+
+<center>
+
+Figura 1 - Diagrama de Classes Strategy
+
+<img src="assets/strategy/strategy-hf.png" alt="Classes" width="1400"/>
+
+<font>Fonte: [Arthur de Melo](https://github.com/arthurmlv) e [Sidney Fernando](https://github.com/nando3d3), 2023</font>
+
+</center>
+
+Por fim, infere-se que, ao analisar o diagrama de classes e a essência da solução, o código se assemelha ao que seria um *framework* caixa preta com customização por herança. Isso posto, a especialização do Strategy desenvolvida para o projeto se trata de uma solução orientada à *frozen spots* que utiliza do polimorfismo para especializar os métodos da interface.
 
 ## Reutilização Externa
 
@@ -67,7 +85,7 @@ Figura X - Views criadas para o projeto
 
 ## Referências Bibliográficas
 
-> Bourque, P., Fairley, R. E. Guide to the Software Engineering Body of Knowledge, Version 3.0. SWEBOK. IEEE Computer Society, 2014. Disponível em: http://www.computer.org/web/swebok/v3.
+> Bourque, P., Fairley, R. E. Guide to the Software Engineering Body of Knowledge, Version 3.0. SWEBOK. IEEE Computer Society, 2014. Disponível em: <http://www.computer.org/web/swebok/v3>.
 >
 > SOMMERVILLE, Ian. Engenharia de Software. 9a. edição. Pearson, 2011.</p>
 >
@@ -76,6 +94,11 @@ Figura X - Views criadas para o projeto
 > KRUEGER, Charles. ACM Computing Surveys. Volume 24, Issue 2, pp 131–183, 1992. Disponível em: https://doi.org/10.1145/130844.130856.
 >
 > MASSOL, Vincent. JUnit in action. 2004. Disponível em: https://ds.amu.edu.et/xmlui/bitstream/handle/123456789/11251/Manning.JUnit.In.Action.Oct.2003.ISBN.1930110995.pdf?sequence=1&isAllowed=y.
+>
+> PREE, Wolfgang. Essential framework design patterns. Framework, v. 2, p. B1, 1997. Disponível em: <https://citeseerx.ist.psu.edu/document?repid=rep1&type=pdf&doi=75f30031d0a8723c8aaa08532d17637ad5392621>.
+>
+> Padrões Comportamentais: Strategy. Refactoring.Guru, 2023. Disponível em: <https://refactoring.guru/pt-br/design-patterns/strategy>.
+
 
 ## Histórico de Versões
 
@@ -86,3 +109,4 @@ Figura X - Views criadas para o projeto
 | 1.0.2      | Adição da introdução   | [Arthur de Melo](https://github.com/arthurmlv)   |  [Douglas Alves](https://github.com/dougAlvs)  | 30/11/2023|
 | 1.0.3      | Adição do objetivo e metodologia   | [Douglas Alves](https://github.com/dougAlvs)  |  [Sidney Fernando](https://github.com/nando3d3)  | 30/11/2023|
 | 1.0.4      | Adiciona reutilização de testes   | [Arthur de Melo](https://github.com/arthurmlv)  |  [Geovanna Maciel](https://github.com/manuziny)  | 01/12/2023|
+| 1.0.5      | Adiciona reutilização do strategy   | [Arthur de Melo](https://github.com/arthurmlv)  |  [Matheus Henrique](https://github.com/mathonaut)  | 01/12/2023|
