docs: adiciona reutilização singleton versao 1

--- a/docs/ArquiteturaReutilizacao/4.2.ReutilizacaoDeSoftware.md
+++ b/docs/ArquiteturaReutilizacao/4.2.ReutilizacaoDeSoftware.md
@@ -14,17 +14,38 @@ A preparação para a produção do artefato teve início na reunião documentad
 
 ## Reutilização Interna
 
-### Strategy
+## Padrão de Projeto - Reutilização
 
-A análise de *hot spots* se dá pela análise dos pontos de especialização de um determinado framework. Sendo assim, as classes que possuem implementação rasa ou sem muito significado se caracterizam mais como pontos de hot spots (PREE, 1997). Logo, infere-se que as partes de implementação mais concretas e específicas são definidas como *frozen spots*. Ademais, deve-se ponderar que esta resolução não objetiva validar se o cupom é válido ou não para aquele produto, a implementação da resolução dessa vicissitude está detalhada no documento do [Chain of Responsibility](PadroesDeProjeto/chainOfResponsibility.md).
 
-No caso da especialização do Strategy implementada para o projeto, os frozen spots ficam notórios a se considerar que o padrão seria reutilizado para cálculo de desconto. Portanto, a especialização destes seria pouco provável, e tais correspondem às classes destacadas de azul na imagem: `calcDescontoStrategy`, `calcDescontoPorcento`, `calcDescontoValor` e `noDiscount`.
+A análise de *hot spots* se dá pela análise dos pontos de especialização de um determinado framework. Sendo assim, as classes que possuem implementação rasa ou sem muito significado se caracterizam mais como pontos de hot spots (PREE, 1997). Logo, infere-se que as partes de implementação mais concretas e específicas são definidas como *frozen spots*. 
 
-No entanto, apenas uma classe corresponde ao que é maleável: a `sacola`. Dado que o contexto pode mudar, por mais que seja necessário aplicar o desconto, o valor total pode ser calculado de forma diferente, bem como os itens podem ser armazenados de forma diferente. Além de que os métodos são extremamente gerais e não especializados mesmo na implementação do diagrama da Figura 1.
+### Singleton
+Ao aplicar a análise de *hot spots* e *frozen spots* na implementação do padrão de projeto Singleton, identificamos o hot spot quando observa-se que o Singleton é particularmente útil no controle de acesso a uma única instância global em todo o sistema. Especificamente, a classe `DatabaseSingleton` se destaca como um hot spot, pois oferece uma abordagem centralizada para controlar e gerenciar o acesso a uma única instância. Essa característica é valiosa, pois impede a criação de múltiplas instâncias, garantindo consistência e evitando comportamentos inesperados no contexto do sistema. 
+
+Como frozen spots, podemos identificar a testabilidade da classe `PlataformStatistics`. Essa classe está fortemente acoplada à classe `DatabaseSingleton` e possui uma dependência direta que pode restringir a flexibilidade ao utilizar outras fontes de dados. Além disso, a classe `PlataformStatistics` depende da interface `ResultSetProcessor`, o que também pode limitar a flexibilidade no processamento de resultados. Portanto, se as necessidades de processamento evoluírem, a dependência em ResultSetProcessor pode exigir modificações na implementação.
 
 <center>
 
 Figura 1 - Diagrama de Classes Strategy
+
+<img src="assets\DiagramaReutilizacao\singletonHotFrozen.png" alt="Classes" width="1400"/>
+
+<font>Fonte: [Douglas Alves](https://github.com/dougAlvs), 2023</font>
+
+</center>
+
+
+
+### Strategy
+Antes da análise, deve-se ponderar que esta resolução não objetiva validar se o cupom é válido ou não para aquele produto, a implementação da resolução dessa vicissitude está detalhada no documento do [Chain of Responsibility](PadroesDeProjeto/chainOfResponsibility.md).
+
+No caso da especialização do Strategy implementada para o projeto, os frozen spots ficam notórios a se considerar que o padrão seria reutilizado para cálculo de desconto. Portanto, a especialização destes seria pouco provável, e tais correspondem às classes destacadas de azul na imagem: `calcDescontoStrategy`, `calcDescontoPorcento`, `calcDescontoValor` e `noDiscount`.
+
+No entanto, apenas uma classe corresponde ao que é maleável: a `sacola`. Dado que o contexto pode mudar, por mais que seja necessário aplicar o desconto, o valor total pode ser calculado de forma diferente, bem como os itens podem ser armazenados de forma diferente. Além de que os métodos são extremamente gerais e não especializados mesmo na implementação do diagrama da Figura 2.
+
+<center>
+
+Figura 2 - Diagrama de Classes Strategy
 
 <img src="assets/strategy/strategy-hf.png" alt="Classes" width="1400"/>
 
@@ -110,3 +131,4 @@ Figura X - Views criadas para o projeto
 | 1.0.3      | Adição do objetivo e metodologia   | [Douglas Alves](https://github.com/dougAlvs)  |  [Sidney Fernando](https://github.com/nando3d3)  | 30/11/2023|
 | 1.0.4      | Adiciona reutilização de testes   | [Arthur de Melo](https://github.com/arthurmlv)  |  [Geovanna Maciel](https://github.com/manuziny)  | 01/12/2023|
 | 1.0.5      | Adiciona reutilização do strategy   | [Arthur de Melo](https://github.com/arthurmlv)  |  [Matheus Henrique](https://github.com/mathonaut)  | 01/12/2023|
+| 1.0.6     | Adiona reutilização do singleton | [Douglas Alves](https://github.com/dougAlvs) e [Geovanna Maciel](https://github.com/manuziny) | [Matheus Henrique](https://github.com/mathonaut)  | 01/12/2023  | 
