docs: adiciona versao inicial da pag

--- a/docs/ArquiteturaReutilizacao/4.3.ParticipacoesArqReutilizacao.md
+++ b/docs/ArquiteturaReutilizacao/4.3.ParticipacoesArqReutilizacao.md
@@ -1,20 +1,27 @@
 # 4.3. Participações - Arquitetura & Reutilização de Software
 
-Breve relato sobre as participações/contribuições de cada membro à entrega. 
+## Introdução
 
-Arquitetura de Software
+Esse documento apresenta as participações de cada integrante do grupo na elaboração dos artefatos da etapa de modelagem.
 
-|Nome do Membro | Contribuição | Significância da Contribuição para o Projeto (Excelente/Boa/Regular/Ruim/Nula) |
-| -- | -- | -- |
-| Fulano  |  1. Colaboração na Especificação da Visão Lógica do DAS. 2. Realização de Debate sobre Arquitetura Limpa, usando como base a fonte: O guia do artesão para estrutura e design de software do autor Robert C. Martin. | Boa |
+## Metodologia
 
-TODOS DEVEM PARTICIPAR, MOSTRANDO SEUS PONTOS DE VISTA E COMO COLABORARAM NESSA ETAPA DA ENTREGA.
+Antes de se iniciar a construção dos artefatos para a entrega foi elaborado um cronograma para melhor organizar o grupo. Após isso, na reunião de planning, foi feita a separação das tarefas para cada integrante, além da criação das respectivas issues no github e preenchimento do cronograma. A tabela 1 apresenta o cronograma planejado da entrega.
 
+!!BOTAR CRONOGRAMA!!
 
-Reutilização de Software
+Para a avaliação da participação individual, foi elaborado um [formulário](https://forms.gle/1iRAga8uuveqvjZw5) em que cada pessoa alocada para um determinado artefato avaliaria sua participação nele, além da participação dos demais colegas. A avaliação foi feita em uma escala de 0 a 4, com o 0 representando uma participação nula e 4 uma participação excelente. Dito isso, a média dessas avaliações será disponibilizada aqui, assim como um breve texto em que cada integrante descreve suas contribuições para a entrega.
 
-|Nome do Membro | Contribuição | Significância da Contribuição para o Projeto (Excelente/Boa/Regular/Ruim/Nula) |
-| -- | -- | -- |
-| Fulano  |  1. Trabalho Coletivo para Modelagem e Implementação do Exemplo de Reutilização na Aplicação. 2. Estudos sobre o Framework React (https://pt-br.reactjs.org/), com realização de reuniao via Discord. 3. Estudos sobre Atomic Design, consultando a fonte: https://danilowoz.com/blog/atomic-design-with-react | Excelente |
+## Participações
 
-TODOS DEVEM PARTICIPAR, MOSTRANDO SEUS PONTOS DE VISTA E COMO COLABORARAM NESSA ETAPA DA ENTREGA.
+!!colocar a outra tabela aqui!!
+
+## Relato Individual de Participação
+
+## Quadro de Commits
+
+## Histórico de Versões
+
+| Versão | Data       | Descrição                                                          | Autor(es)                                        | Revisor(es)                                    |
+| ------ | ---------- | ------------------------------------------------------------------ | ------------------------------------------------ | ---------------------------------------------- |
+| `1.0`  | 01/12/2023 | Criação da página                                                  | [Geovanna Maciel](https://github.com/manuziny)     | [Sidney Fernando](https://github.com/nando3d3) |
