docs: adiciona tópico de reutilização por padrões de projeto

--- a/docs/ArquiteturaReutilizacao/4.2.ReutilizacaoDeSoftware.md
+++ b/docs/ArquiteturaReutilizacao/4.2.ReutilizacaoDeSoftware.md
@@ -14,7 +14,39 @@ A preparação para a produção do artefato teve início na reunião documentad
 
 ## Reutilização Interna
 
-## Padrão de Projeto - Reutilização
+### Padrões de Projeto
+
+Os padrões de projeto representam um ponto crucial na reutilização de software, oferecendo soluções previamente testadas e validadas para desafios recorrentes no desenvolvimento de software. São abordagens flexíveis e padronizadas para resolver problemas específicos de design ou arquitetura em sistemas de software. Além disso, a escolha dos padrões de projeto GOF estão, frequentemente em consonância com os princípios do SOLID (MARTIN, 2003):
+
+* **SRP (Princípio da Responsabilidade Única):** Muitas design patterns favorecem a separação de responsabilidades em classes ou componentes individuais, seguindo o conceito de uma única responsabilidade por classe.
+* **OCP (Princípio do Aberto/Fechado):** Ao privilegiar a extensão sobre a modificação direta do código existente, as design patterns frequentemente aderem ao OCP.
+* **LSP (Princípio da Substituição de Liskov):** Algumas design patterns são concebidas para permitir que as instâncias de classes derivadas sejam substituíveis por instâncias de suas classes base, respeitando o LSP.
+* **ISP (Princípio da Segregação de Interfaces):** Certas design patterns promovem a segmentação de interfaces em conjuntos menores e específicos, alinhando-se ao ISP.
+* **DIP (Princípio da Inversão de Dependência):** Design patterns que introduzem abstrações e dependências através de interfaces aderem ao DIP, permitindo que módulos de alto nível dependam de abstrações, não de implementações concretas.
+
+A aplicação desses padrões não só fomenta a reutilização de soluções de design, mas também resulta em código mais coeso, flexível e compatível com os princípios fundamentais para a manutenibilidade e extensibilidade do software.
+
+Sendo assim, a equipe optou por implementar um total de **seis** padrões de projeto que julgou aplicável ao escopo, cada um deles apresentando uma problemática, sua solução, uma modelagem UML e código. A Tabela 1 traz o link da página de cada padrão implementado e sua problemática.
+
+<center>
+
+Tabela 1 - Padrões de Projeto
+
+| Padrão de Projeto | Problemática |
+|:-----------------:|:------------:|
+|      [Adapter](/PadroesDeProjeto/adapter)         |       Uso de diferentes métodos de pagamento       |
+|       [Chain of Responsibility](/PadroesDeProjeto/chainOfResponsibility)            |     Validação de cupons de desconto         |
+|        [Factory Method](/PadroesDeProjeto/factoryMethod)           |      Criação de diferentes produtos de uma mesma categoria        |
+|         [Observer](/PadroesDeProjeto/observer)          |       Envio de notificações de promoções em produtos       |
+|         [Singleton](/PadroesDeProjeto/singleton)          |      Gerenciamento da conexão ao banco de dados        |
+|         [Strategy](/PadroesDeProjeto/strategy)          |       Uso de diferentes algoritmos para cálculo de descontos na sacola       |
+
+Fonte: [Douglas Alves](https://github.com/dougAlvs), 2023.
+
+</center>
+
+
+### Padrões de Projeto - Análise de Hot spots e Frozen spots
 
 
 A análise de *hot spots* se dá pela análise dos pontos de especialização de um determinado framework. Sendo assim, as classes que possuem implementação rasa ou sem muito significado se caracterizam mais como pontos de hot spots (PREE, 1997). Logo, infere-se que as partes de implementação mais concretas e específicas são definidas como *frozen spots*. 
@@ -26,14 +58,13 @@ Como frozen spots, podemos identificar a testabilidade da classe `PlataformStati
 
 <center>
 
-Figura 1 - Diagrama de Classes Strategy
+Figura 1 - Diagrama de Classes Singleton
 
 <img src="assets\DiagramaReutilizacao\singletonHotFrozen.png" alt="Classes" width="1400"/>
 
 <font>Fonte: [Douglas Alves](https://github.com/dougAlvs), 2023</font>
 
 </center>
-
 
 
 ### Strategy
@@ -119,6 +150,8 @@ Figura X - Views criadas para o projeto
 > PREE, Wolfgang. Essential framework design patterns. Framework, v. 2, p. B1, 1997. Disponível em: <https://citeseerx.ist.psu.edu/document?repid=rep1&type=pdf&doi=75f30031d0a8723c8aaa08532d17637ad5392621>.
 >
 > Padrões Comportamentais: Strategy. Refactoring.Guru, 2023. Disponível em: <https://refactoring.guru/pt-br/design-patterns/strategy>.
+>
+> MARTIN, Robert Cecil. Agile software development: principles, patterns, and practices. Prentice Hall PTR, 2003.
 
 
 ## Histórico de Versões
@@ -131,4 +164,5 @@ Figura X - Views criadas para o projeto
 | 1.0.3      | Adição do objetivo e metodologia   | [Douglas Alves](https://github.com/dougAlvs)  |  [Sidney Fernando](https://github.com/nando3d3)  | 30/11/2023|
 | 1.0.4      | Adiciona reutilização de testes   | [Arthur de Melo](https://github.com/arthurmlv)  |  [Geovanna Maciel](https://github.com/manuziny)  | 01/12/2023|
 | 1.0.5      | Adiciona reutilização do strategy   | [Arthur de Melo](https://github.com/arthurmlv)  |  [Matheus Henrique](https://github.com/mathonaut)  | 01/12/2023|
-| 1.0.6     | Adiona reutilização do singleton | [Douglas Alves](https://github.com/dougAlvs) e [Geovanna Maciel](https://github.com/manuziny) | [Matheus Henrique](https://github.com/mathonaut)  | 01/12/2023  | 
+| 1.0.6     | Adiciona reutilização do singleton | [Douglas Alves](https://github.com/dougAlvs) e [Geovanna Maciel](https://github.com/manuziny) | [Matheus Henrique](https://github.com/mathonaut)  | 01/12/2023  | 
+| 1.0.7     | Adiciona tópico de reutilização por padrões de projeto  | [Douglas Alves](https://github.com/dougAlvs) | [Matheus Henrique](https://github.com/mathonaut)  | 01/12/2023  | 
