--- a/docs/ArquiteturaReutilizacao/4.3.ParticipacoesArqReutilizacao.md
+++ b/docs/ArquiteturaReutilizacao/4.3.ParticipacoesArqReutilizacao.md
@@ -17,7 +17,7 @@ Antes de se iniciar a construção dos artefatos para a entrega foi elaborado um
 
 </center>
 
-Para a avaliação da participação individual, foi elaborado um [formulário]( https://forms.gle/jWfqN9tpBFfuuXUd9) em que cada pessoa alocada para um determinado artefato avaliaria sua participação nele, além da participação dos demais colegas e o relato individual. A avaliação foi feita em uma escala de 0 a 4, com o 0 representando uma participação nula e 4 uma participação excelente. Dito isso, a média dessas avaliações será disponibilizada aqui, assim como um breve texto em que cada integrante descreve suas contribuições para a entrega.
+Para a avaliação da participação individual, foi elaborado um [formulário](https://forms.gle/jWfqN9tpBFfuuXUd9) em que cada pessoa alocada para um determinado artefato avaliaria sua participação nele, além da participação dos demais colegas e o relato individual. A avaliação foi feita em uma escala de 0 a 4, com o 0 representando uma participação nula e 4 uma participação excelente. Dito isso, a média dessas avaliações será disponibilizada aqui, assim como um breve texto em que cada integrante descreve suas contribuições para a entrega.
 
 ## Participações
 A tabela 2 sintetiza cada integrante do grupo e sua participação nos respectivos artefatos em que foi alocado.
@@ -41,168 +41,163 @@ A tabela 2 sintetiza cada integrante do grupo e sua participação nos respectiv
 </thead>
 <tbody>
   <tr>
-    <td rowspan="5"> <a href="https://github.com/arthurmlv">Arthur de Melo</a></td>
-    <td><a href="#/Modelagem/">Visão Lógico</a></td>
+    <td rowspan="4"> <a href="https://github.com/arthurmlv">Arthur de Melo</a></td>
+    <td><a href="#/ArquiteturaReutilizacao/visoes/visao-processos.md">Visão Processo</a></td>
     <td>Excelente</td>
     <td>Excelente (4/4)</td>
   </tr>
   <tr>
-  <td> <a href="#/Modelagem/">Visão Processo</a></td>
+    <td> <a href="#/ArquiteturaReutilizacao/visoes/visao-use-case.md">Visão de Caso de Uso</a></td>
     <td>Excelente</td>
     <td>Excelente (4/4)</td>
   </tr>
   <tr>
-    <td> <a href="#/Modelagem/">Visão de Caso de Uso</a></td>
+    <td> <a href="#/PadroesDeProjeto/3.PadroesDeProjeto.md">Padrões de Projeto</a></td>
     <td>Excelente</td>
     <td>Excelente (4/4)</td>
   </tr>
   <tr>
-    <td> <a href="#/Modelagem/">Padrões de Projeto</a></td>
-    <td>Excelente</td>
-    <td>Excelente (4/4)</td>
-  </tr>
-  <tr>
-    <td> <a href="#/Modelagem/">Reutilização</a></td>
+    <td> <a href="#/ArquiteturaReutilizacao/4.2.ReutilizacaoDeSoftware.md">Reutilização</a></td>
     <td>Excelente</td>
     <td>Excelente (4/4)</td>
   </tr>
   <tr>
     <td rowspan="3"> <a href="https://github.com/deboracaires">Débora Caires</a></td>
-    <td><a href="#/Modelagem/">Visão Implementaçã</a></td>
+    <td><a href="#/ArquiteturaReutilizacao/visoes/visao-implementacao.md">Visão Implementação</a></td>
     <td>Excelente</td>
     <td>Excelente (4/4)</td>
   </tr>
   <tr>
-    <td><a href="#/Modelagem/">Padrões de Projeto</a></td>
+    <td><a href="#/PadroesDeProjeto/3.PadroesDeProjeto.md">Padrões de Projeto</a></td>
     <td>Excelente</td>
     <td>Excelente (4/4)</td>
   </tr>
   <tr>
-    <td><a href="#/Modelagem/">Reutilização</a></td>
+    <td><a href="#/ArquiteturaReutilizacao/4.2.ReutilizacaoDeSoftware.md">Reutilização</a></td>
     <td>Excelente</td>
     <td>Excelente (4/4)</td>
   </tr>
     <td rowspan="4"> <a href="https://github.com/dougAlvs">Douglas Alves</a></td>
-    <td><a href="#/Modelagem/"> Visão Implementação</a></td>
+    <td><a href="#/ArquiteturaReutilizacao/visoes/visao-implementacao.md"> Visão Implementação</a></td>
     <td>Excelente</td>
     <td>Excelente (4/4)</td>
   </tr>
   <tr>
-    <td><a href="#/Modelagem/">Visão Dados</a></td>
+    <td><a href="#/ArquiteturaReutilizacao/visoes/visao-dados.md">Visão Dados</a></td>
     <td>Excelente</td>
     <td>Excelente (4/4)</td>
   </tr>
   <tr>
-    <td><a href="#/Modelagem/">Padrão de Projeto</a></td>
+    <td><a href="#/PadroesDeProjeto/3.PadroesDeProjeto.md">Padrões de Projeto</a></td>
     <td>Excelente</td>
     <td>Excelente (4/4)</td>
   </tr>
   <tr>
-    <td><a href="#/Modelagem/">Reutilização</a></td>
+    <td><a href="#/ArquiteturaReutilizacao/4.2.ReutilizacaoDeSoftware.md">Reutilização</a></td>
     <td>Excelente</td>
     <td>Excelente (4/4)</td>
   </tr>
   <tr>
     <td rowspan="5"> <a href="https://github.com/manuziny">Geovanna Maciel</a></td>
-    <td><a href="#/Modelagem/">Visão Lógica</a></td>
+    <td><a href="#/ArquiteturaReutilizacao/visoes/visao-logico.md">Visão Lógica</a></td>
     <td>Excelente</td>
     <td>Excelente (4/4)</td>
   </tr>
   <tr>
-    <td><a href="#/Modelagem/">Visão de Caso de Uso</a></td>
+    <td><a href="#/ArquiteturaReutilizacao/visoes/visao-use-case.md">Visão de Caso de Uso</a></td>
     <td>Excelente</td>
     <td>Excelente (4/4)</td>
   </tr>
   <tr>
-    <td><a href="#/Modelagem/">Padrão de Projeto</a></td>
+    <td><a href="#/PadroesDeProjeto/3.PadroesDeProjeto.md">Padrão de Projeto</a></td>
     <td>Excelente</td>
     <td>Excelente (4/4)</td>
   </tr>
   <tr>
-    <td><a href="#/Modelagem/">Reutilização</a></td>
+    <td><a href="#/ArquiteturaReutilizacao/4.2.ReutilizacaoDeSoftware.md">Reutilização</a></td>
     <td>Excelente</td>
     <td>Excelente (4/4)</td>
   </tr>
   <tr>
-    <td><a href="#/Modelagem/">Participações</a></td>
+    <td><a href="https://unbarqdsw2023-2.github.io/2023.2_G7_ProjetoMagazineLuiza/#/ArquiteturaReutilizacao/4.3.ParticipacoesArqReutilizacao">Participações</a></td>
     <td>Excelente</td>
     <td>Excelente (4/4)</td>
   </tr>
   <tr>
     <td rowspan="3"> <a href="https://github.com/Hellen159">Hellen Fernanda</a></td>
-    <td><a href="#/Modelagem/">Visão Lógico</a></td>
+    <td><a href="#/ArquiteturaReutilizacao/visoes/visao-logico.md">Visão Lógica</a></td>
     <td>Nula</td>
     <td>Ruim (1/4)</td>
   </tr>
   <tr>
-    <td><a href="#/Modelagem/">Padrão de Projeto</a></td>
+    <td><a href="#/PadroesDeProjeto/3.PadroesDeProjeto.md">Padrão de Projeto</a></td>
     <td>Boa</td>
     <td>Regular (2,7/4)</td>
   </tr>
   <tr>
-  <td><a href="#/Modelagem/">Reutilização</a></td>
+  <td><a href="#/ArquiteturaReutilizacao/4.2.ReutilizacaoDeSoftware.md">Reutilização</a></td>
     <td>Excelente</td>
     <td>Ruim (1,4/4)</td>
   </tr>
     <td rowspan="3"> <a href="https://github.com/laurapinos">Laura Pinos</a></td>
-    <td><a href="#/Modelagem/">Visão Lógico</a></td>
+    <td><a href="#/ArquiteturaReutilizacao/visoes/visao-logico.md">Visão Lógica</a></td>
     <td>Regular</td>
     <td>Regular (2,5/4)</td>
   </tr>
   <tr>
-    <td><a href="#/Modelagem/">Padrão de Projeto</a></td>
+    <td><a href="#/PadroesDeProjeto/3.PadroesDeProjeto.md">Padrão de Projeto</a></td>
     <td>Boa</td>
     <td>Boa (2,75/4)</td>
   </tr>
   <tr>
-    <td><a href="#/Modelagem/">Reutilização</a></td>
+    <td><a href="#/ArquiteturaReutilizacao/4.2.ReutilizacaoDeSoftware.md">Reutilização</a></td>
     <td>Excelente</td>
     <td>Excelente (3,75/4)</td>
   </tr>
   <tr>
     <td rowspan="3"> <a href="https://github.com/macieljuniormax">Maciel Junior</a></td>
-    <td><a href="#/Modelagem/">Visão Implementação</a></td>
+    <td><a href="#/ArquiteturaReutilizacao/visoes/visao-implementacao.md">Visão Implementação</a></td>
     <td>Excelente</td>
     <td>Excelente (4/4)</td>
   </tr>
   <tr>
-    <td><a href="#/Modelagem/">Padrão de Projeto</a></td>
+    <td><a href="#/PadroesDeProjeto/3.PadroesDeProjeto.md">Padrão de Projeto</a></td>
     <td>Excelente</td>
     <td>Excelente (4/4)</td>
   </tr>
   <tr>
-    <td><a href="#/Modelagem/">Reutilização</a></td>
+    <td><a href="#/ArquiteturaReutilizacao/4.2.ReutilizacaoDeSoftware.md">Reutilização</a></td>
     <td>Excelente</td>
     <td>Excelente (4/4)</td>
   </tr>
   <tr>
     <td rowspan="3"> <a href="https://github.com/mathonaut">Matheus Henrique</a></td>
-    <td><a href="#/Modelagem/">Visão Processo</a></td>
+    <td><a href="#/ArquiteturaReutilizacao/visoes/visao-processos.md">Visão Processo</a></td>
     <td>Excelente</td>
     <td>Excelente (4/4)</td>
   </tr>
   <tr>
-    <td><a href="#/Modelagem/">Padrão de Projeto</a></td>
+    <td><a href="#/PadroesDeProjeto/3.PadroesDeProjeto.md">Padrão de Projeto</a></td>
     <td>Boa</td>
     <td>Boa (4/4)</td>
   </tr>
-  <td><a href="#/Modelagem/">Reutilização</a></td>
+  <td><a href="#/ArquiteturaReutilizacao/4.2.ReutilizacaoDeSoftware.md">Reutilização</a></td>
     <td>Boa</td>
     <td>Excelente (3/4)</td>
   </tr>
   <tr>
     <td rowspan="4"><a href="https://github.com/nando3d3">Sidney Fernando</a></td>
-    <td><a href="#/Modelagem/">Visão Lógica</a></td>
+    <td><a href="#/ArquiteturaReutilizacao/visoes/visao-logico.md">Visão Lógica">Visão Lógica</a></td>
     <td>Excelente</td>
     <td>Excelente (4/4)</td>
   </tr>
   <tr>
-    <td><a href="#/Modelagem/">Padrões de Projeto</a></td>
+    <td><a href="#/PadroesDeProjeto/3.PadroesDeProjeto.md">Padrões de Projeto</a></td>
     <td>Excelente</td>
     <td>Excelente (4/4)</td>
   </tr>
   <tr>
-    <td><a href="#/Modelagem/">Reutilização</a></td>
+    <td><a href="#/ArquiteturaReutilizacao/4.2.ReutilizacaoDeSoftware.md">Reutilização</a></td>
     <td>Excelente</td>
     <td>Excelente (4/4)</td>
   </tr>
@@ -217,7 +212,7 @@ A tabela 2 sintetiza cada integrante do grupo e sua participação nos respectiv
 Este tópico tem como objetivo trazer a visão individual de cada participante do grupo acerca de suas contribuições para a entrega.
 
 #### <a href="https://github.com/arthurmlv">Arthur de Melo</a>
-No Padrão de Projeto implementei e documentei a especialização do padrão strategy junto ao Sidney. Na reutilização documentei a reutilização externa do Maven e do JUnit. Na reutilização interna, fiz a análise de hot spots e frozen spots do strategy.Na visão DAS participei do desenvolvimento das visões de caso de uso e de processo.
+No Padrão de Projeto implementei e documentei a especialização do padrão strategy junto ao Sidney. Na reutilização documentei a reutilização externa do Maven e do JUnit. Na reutilização interna, fiz a análise de hot spots e frozen spots do strategy. Na visão DAS participei do desenvolvimento das visões de caso de uso e de processo.
 
 #### <a href="https://github.com/deboracaires">Débora Caires</a>
 Nessa entrega, participei da produção do padrão de projeto Chain of Responsibility, da visão de implementação e da reutilização. Gostei muito de realizar a implementação de um padrão de projeto em um exemplo prático com o qual já vinha trabalhando há algum tempo. Durante a produção, pude finalmente entender como funciona na prática a utilização de padrões de projeto em um software.
